Benchmark securities loading